--- a/style/portfolio.css
+++ b/style/portfolio.css
@@ -1,67 +1,64 @@
-.portfolio-section-photos {
+.portfolio {
   background-color: white;
-}
 
-.portfolio-section-photos h2 {
-  color: #242424;
-  margin-bottom: 80px;
-}
+  & .portfolio__title {
+    color: #242424;
+    margin-bottom: 80px;
+    margin-top: 80px;
+  }
 
-.grid-paysages {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 300px 300px 300px;
-  gap: 15px;
-}
+  & .portfolio__grid {
+      display: grid;
+      /* grid-template-columns: 1fr 1fr 1fr; */
+      grid-template-columns: repeat(3, 1fr);
+      gap: 15px;
 
-.grid-portraits {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 300px 300px;
-  gap: 15px;
-}
+    & .portfolio__grid--paysage {
+      grid-template-rows: 300px 300px 300px;
+      gap: 15px;
+    }
 
-.grid-paysages img,
-.grid-portraits img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
+    & .portfolio__grid--portraits {
+      grid-template-rows: 300px 300px;
+    }
 
-.lien-conteneur-photo {
-  position: relative;
-}
+    & img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
 
-.photo-hover {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 1.5em;
-  color: white;
-  background-color: rgba(0, 0, 0, 0.7);
-  display: none;
-}
+  & .portfolio__item {
+    position: relative;
+    display: block;
+    /* height: 300px; Taille uniforme */
+    aspect-ratio: 4 / 3;
+    overflow: hidden;
 
-.lien-conteneur-photo:hover .photo-hover {
-  display: flex;
-}
+    &:hover .portfolio__hover {
+      opacity: 1;
+    }
+  }
 
-.titre-portraits {
-  padding-top: 80px;
+  & .portfolio__hover {
+    position: absolute;
+    bottom: 0;
+    top: 0;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5em;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.7);
+    opacity: 0;
+    transition: opacity 0.4s ease;
+  }
 }
 
 @media screen and (max-width: 996px) {
-  .grid-paysages {
-    grid-template-columns: 1fr;
-    gap: 15px;
-  }
-
-  .grid-portraits {
+  .portfolio .portfolio__grid {
     grid-template-columns: 1fr;
     gap: 15px;
   }
